# NocturaWallet

./: .env.development  .env.example  .env.production  .gitignore  BUILD_PLAN.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  app.json  babel.config.js  detox.config.js  globalBuffer.js  index.js  jest.config.js  metro.config.js  package-lock.json  package.json  react-native.config.js  tailwind.config.js  tsconfig.json
.github/workflows/: ci.yml
__mocks__/: jail-monkey.ts  react-native-config.ts  react-native-fs.ts  react-native-keychain.ts  react-native-mmkv.ts  react-native-ssl-pinning.ts
__mocks__/@react-native-community/: netinfo.ts
__mocks__/@solana/: web3.js.ts
__tests__/: App.test.tsx
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/cpp/: CMakeLists.txt  noctura_key_jni.cpp
docs/: AUDIT_FINDINGS.md  AUDIT_IMPLEMENTATION_GUIDE.md  NATIVE_INTEGRATION_TODO.md  referral-applinks-website.md
docs/contracts/: 2026-07-02-change-output-withdraw-contract.md  2026-07-07-private-transfer-project2-contract.md
docs/runbooks/: 2026-06-01-android-transparent-v1-runbook.md
docs/superpowers/plans/: 2026-04-04-step-01-02-scaffold.md  2026-04-04-step-03-04-foundation.md  2026-04-04-step-05-06-07-security-core.md  2026-04-04-step-08-solana-rpc.md  2026-04-04-step-09-10-11-modules.md  2026-04-04-step-12-13-entry-screens.md  2026-04-04-step-14-onboarding.md  2026-04-04-step-15-16-dashboard.md  2026-04-04-step-17-staking.md  2026-04-04-step-18-send.md  2026-04-04-step-19-tx-status.md  2026-04-04-step-21-22-23-social.md  2026-04-04-step-24-25-links-backup.md  2026-04-04-step-26-27-28-zk-engine.md  2026-04-05-step-29-30-31-shielded-flows.md  2026-04-05-step-32-33-34-platform.md  2026-04-07-step-35-testing.md  2026-05-29-screen-17-shielded-explainer.md  2026-05-30-screen-18-zk-proof.md  2026-05-31-zk-witness-encoding-contract.md  2026-06-01-android-transparent-v1.md  2026-06-12-transaction-flow-screens.md  2026-06-12-transparent-import-and-real-send.md  (+34 more)
docs/zk-contract/: golden-vectors.json  note-encryption-vectors.json  shielded-pool-poc-handoff.md  zk-witness-encoding-contract.md
e2e/: backup.test.ts  deepLink.test.ts  helpers.ts  importWallet.test.ts  notifications.test.ts  onboarding.test.ts  sessionLock.test.ts  shieldedFlow.test.ts  staking.test.ts  transparentSend.test.ts
ios/: Podfile  link-assets-manifest.json
ios/NocturaWallet/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/NocturaWallet.xcodeproj/: project.pbxproj
native/noctura-prover/: Cargo.toml  STATUS.md
native/noctura-prover/examples/: deposit_prove.rs  onchain_format_check.rs  zkey_check.rs
native/noctura-prover/src/: android.rs  lib.rs  proof_bytes.rs  prover.rs  witness_wasmi.rs
native/noctura-prover/tests/: prove_to_bytes.rs
src/: global.css
src/app/: App.tsx  AppProviders.tsx  Navigator.tsx  deepLinkConfig.ts  navigationRef.ts
src/components/: AppUpdateBanner.tsx  AppUpdateModal.tsx  BackupReminderBanner.tsx  BalanceCard.tsx  ConfirmationSheet.tsx  FeeDisplayRow.tsx  ModeToggle.tsx  OfflineBanner.tsx  PinPad.tsx  PresaleBanner.tsx  PriorityFeeToggle.tsx  PrivacyMeter.tsx  ProofProgressOverlay.tsx  QuickActions.tsx  RewardCalculator.tsx  ShieldedAddressInput.tsx  SparkChart.tsx  StakingPositionCard.tsx  StakingUnlockRow.tsx  TierSelector.tsx  TokenLogo.tsx  TokenPickerSheet.tsx  TokenRow.tsx  TokenSelector.tsx  WalletChip.tsx
src/constants/: errors.ts  features.ts  mmkvKeys.ts  presale.ts  programs.ts  provingAssets.ts
src/contexts/: ModeContext.tsx  OnboardingContext.tsx
src/hooks/: useAccent.ts  useDashboardBanners.ts  useJurisdiction.ts  useMode.ts  useNetworkStatus.ts  usePresaleSync.ts  usePriceHistory.ts  usePrices.ts  useReferralDeepLink.ts  useResolvedPrices.ts  useSessionGuard.ts  useSolanaQueries.ts  useSwapQuote.ts
src/screens/: PlaceholderScreen.tsx  PresaleScreen.tsx  PrivacyExplainerScreen.tsx  SplashScreen.tsx  UnlockScreen.tsx
src/types/: env.d.ts  navigation.d.ts  transfer.ts
src/utils/: accessibilityAudit.ts  explorerUrl.ts  formatAddress.ts  formatUsd.ts  generateReferralCode.ts  parseTokenAmount.ts  validateAddress.ts
(+396 files in other folders)
