[package]
name = "noctura-prover"
version = "0.1.0"
edition = "2021"

# M1 spike: desktop-first Groth16 prover over the deployed devnet deposit circuit,
# using the exact snarkjs .zkey + circom .wasm the wallet downloads. Pure Rust
# (arkworks) — no libc++. See docs/superpowers/plans/2026-07-17-m1-native-prover-spike.md

[dependencies]
# circom-compat (ark-circom) — snarkjs .zkey reader + circom2 .wasm witness bridge.
# Pinned to the arkworks-0.4 era (rev 4d99060, "Circom1/Circom2 traits") — master is
# mid-0.5/0.6 migration and internally inconsistent (bn254 0.5 vs groth16-git 0.6).
# NOTE (Android/#1 risk): this rev's witness calculator uses wasmer (C-containing) →
# a libc++ concern for the on-device build; swap to a pure-Rust wasm exec (wasmi) in
# Stage 1. Desktop Stage 0 uses wasmer as-is.
ark-circom = { git = "https://github.com/arkworks-rs/circom-compat", rev = "4d99060" }
# This rev pins arkworks to =0.4.1, but transitive deps (ark-bn254 0.4.0) would pull
# ark-ec/ff/poly/serialize up to 0.4.2 → resolver conflict. Force the whole family
# down to 0.4.1 so everything unifies on the set ark-circom expects.
ark-ec = "=0.4.1"
ark-ff = "=0.4.1"
ark-poly = "=0.4.1"
ark-serialize = "=0.4.1"
# prove/verify flow — pinned to ark-circom's exact locked versions
ark-bn254 = "=0.4.0"
ark-groth16 = "=0.4.0"
ark-snark = "=0.4.0"
ark-std = "=0.4.0"
num-bigint = "=0.4.3"
serde_json = "1"

[[example]]
name = "zkey_check"
path = "examples/zkey_check.rs"
