[package]
name = "noctura-prover"
version = "0.1.0"
edition = "2021"

# M1 spike: desktop-first Groth16 prover over the deployed devnet deposit circuit,
# using the exact snarkjs .zkey + circom .wasm the wallet downloads. Pure Rust
# (arkworks) — no libc++. See docs/superpowers/plans/2026-07-17-m1-native-prover-spike.md

[lib]
name = "noctura_prover"
crate-type = ["rlib", "cdylib"] # cdylib = libnoctura_prover.so for the Android JNI

[dependencies]
# circom-compat (ark-circom) — used ONLY for read_zkey + CircomReduction (no wasm run).
# Pinned to the arkworks-0.4 era (rev 4d99060) — master is mid-0.5/0.6 migration and
# internally inconsistent. It transitively pulls wasmer (its own WitnessCalculator),
# which we DO NOT call — we compute witnesses via pure-Rust wasmi (witness_wasmi) — so
# wasmer's runtime is dead-code-eliminated at link (verified on desktop). If the
# Android cross-compile/link chokes on wasmer, vendor read_zkey + CircomReduction and
# drop ark-circom (see the Stage 1 spec fallback).
ark-circom = { git = "https://github.com/arkworks-rs/circom-compat", rev = "4d99060" }
# This rev pins arkworks to =0.4.1, but transitive deps (ark-bn254 0.4.0) would pull
# ark-ec/ff/poly/serialize up to 0.4.2 → resolver conflict. Force the whole family
# down to 0.4.1 so everything unifies on the set ark-circom expects.
ark-ec = "=0.4.1"
ark-ff = "=0.4.1"
ark-poly = "=0.4.1"
ark-serialize = "=0.4.1"
# prove/verify flow — pinned to ark-circom's exact locked versions
ark-bn254 = "=0.4.0"
ark-groth16 = "=0.4.0"
ark-snark = "=0.4.0"
ark-std = "=0.4.0"
num-bigint = "=0.4.3"
num-traits = "0.2"
fnv = "1"
serde_json = "1"
hex = "0.4"
wasmi = "1.1.0"

# Android JNI bridge (pure Rust — no C++, no libc++_shared).
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

[[example]]
name = "zkey_check"
path = "examples/zkey_check.rs"
